--- a/app/build.gradle
+++ b/app/build.gradle
@@ -3,7 +3,7 @@ apply plugin: 'com.neenbedankt.android-apt'
 
 android {
     compileSdkVersion 25
-    buildToolsVersion "25.0.3"
+    buildToolsVersion "25.0.2"
     defaultConfig {
         applicationId "com.wendy.fpt.popmov"
         minSdkVersion 17
@@ -20,14 +20,19 @@ android {
     }
 }
 
+ext {
+    supportLibVer = '25.1.0'
+}
+
 dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
     androidTestCompile('com.android.support.test.espresso:espresso-core:2.2.2', {
         exclude group: 'com.android.support', module: 'support-annotations'
     })
-    compile 'com.android.support:appcompat-v7:25.3.1'
-    compile 'com.android.support:support-v4:25.3.1'
-    compile 'com.android.support:recyclerview-v7:25.3.1'
+    compile "com.android.support:appcompat-v7:${supportLibVer}"
+    compile "com.android.support:design:${supportLibVer}"
+    compile "com.android.support:recyclerview-v7:${supportLibVer}"
+    compile "com.android.support:support-v4:${supportLibVer}"
 
     testCompile 'junit:junit:4.12'
 
