--- a/app/build.gradle
+++ b/app/build.gradle
@@ -55,7 +55,7 @@ dependencies {
     //Rx
     compile 'io.reactivex:rxandroid:1.0.1'
 
-    //Fresco Image Library
+    //Glide Image Library
     compile 'com.github.bumptech.glide:glide:3.8.0'
 
     //ButterKnife View DI
@@ -65,4 +65,7 @@ dependencies {
     //Parceler
     compile 'org.parceler:parceler-api:1.1.9'
     apt 'org.parceler:parceler:1.1.9'
+
+    //Stetho
+    compile 'com.facebook.stetho:stetho:1.5.0'
 }
