--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
-<manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.wendy.fpt.popmov">
+<manifest package="com.wendy.fpt.popmov"
+    xmlns:android="http://schemas.android.com/apk/res/android">
 
     <uses-permission android:name="android.permission.INTERNET"/>
 
@@ -14,12 +14,17 @@
         android:theme="@style/AppTheme">
         <activity android:name=".view.activity.MainActivity">
             <intent-filter>
-                <action android:name="android.intent.action.MAIN" />
+                <action android:name="android.intent.action.MAIN"/>
 
-                <category android:name="android.intent.category.LAUNCHER" />
+                <category android:name="android.intent.category.LAUNCHER"/>
             </intent-filter>
         </activity>
-        <activity android:name=".view.activity.MovieDetailActivity" />
+        <activity android:name=".view.activity.MovieDetailActivity"/>
+
+        <provider
+            android:name=".data.contentprovider.FavMovContentProvider"
+            android:authorities="com.wendy.fpt.popmov"
+            android:exported="false"/>
     </application>
 
 </manifest>
